[package]
name = "awa"
version = "0.1.0"
authors = ["awa"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
void = "1.0.2"
rppal = { version = "0.11.3"}
embedded-hal = { version="0.2.3", features = ["unproven"]}
